--- a/report-react/src/index.css
+++ b/report-react/src/index.css
@@ -74,3 +74,81 @@ body{
 	font-size: 10px;
 	font-weight: 100;
 }
+
+/*** Body ***/
+.body {	
+	position: absolute;
+	top: 50px;
+	bottom: 50px;
+	width: 100%;
+	overflow-y: scroll;
+}
+
+/*** List ***/
+.list{	
+	padding: 0;
+	margin: 0 auto;
+	z-index: 1;
+}
+
+/*** Item ***/
+.item {
+	height: 60px;
+	padding: 8px 8px;
+	background-color: #fff;
+	border-bottom: .5px solid rgba(0, 0, 0, .3);
+	margin-bottom: 0.5px;
+	vertical-align: middle;
+}
+.item span{
+	display: inline-block;
+	vertical-align: middle;
+	line-height: 15px;
+	margin: 5px;
+}
+.item-status {
+	float: right;
+	font-weight: 200;
+	font-size: 15px;
+}
+
+.item-title {
+	display: block;	
+	font-size: 18px;
+}
+.control {
+	float: right;
+	vertical-align: middle;
+	position: relative;
+	top: 2.5px;
+}
+.item button {
+	border-radius: 3px;
+	margin:0 5px;
+	height: 25px;
+	width: 60px;
+	padding: 0;
+	background-color: #FFF;
+	box-shadow: none;
+	font-size: 15px;
+	line-height: 23px;
+	cursor: pointer;
+}
+#checkBill,#checkDevice {
+	border: .5px solid #a0cf67;
+	color: #a0cf67;
+}
+#cancelBill {
+	border: .5px solid #ff9966;
+	color: #ff9966;
+}
+.item-time {
+	font-weight: 100;
+	font-size: 1px;
+	color: #AAA;
+	height: 15px;
+	line-height: 15px;
+}
+.item-id {
+	float: left;
+}
