--- a/report-react/src/index.css
+++ b/report-react/src/index.css
@@ -1,3 +1,4 @@
+/*** 公共样式 ***/
 body{
 	width:100%;
 	margin:0;
@@ -5,6 +6,93 @@ body{
 	overflow: auto;
 	background-color: #edf0f1;
 	color: #666;
+}
+/*** form ***/
+form {
+	position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 85%;
+    border-radius: 10px;
+    box-shadow:1px 1px 1px 2px rgba(0, 0, 0, .1);
+   	padding: 25px 0;
+	background-color: #fff;	
+	text-align: center;
+	z-index: 4;
+	max-height: 500px;
+	overflow: scroll;
+}
+.form-title {
+	color: #2196F3;
+}
+form hr {
+	margin-bottom: 20px;
+}
+select {
+	height: 40px;
+	width: 196px;
+	padding: 0 8px;
+	margin-bottom: 20px;
+	border: 1px solid #2196F3;
+	border-radius: 5px;
+	overflow: hidden;
+	outline: none;
+}
+input {
+	height: 18px;
+	width: 178px;
+	margin-bottom: 20px;
+	padding: 10px 8px;
+	border: 1px solid #2196F3;
+	border-radius: 5px;
+}
+input[type=date]::-webkit-inner-spin-button { 
+	visibility: hidden;
+}
+textarea {
+	margin-bottom: 20px;
+	padding: 12px 8px;
+	border: 1px solid #2196F3;
+	border-radius: 5px;
+	vertical-align: top;
+}
+input[type=submit] {
+	margin: 10px auto;
+	background-color: #2196F3;
+	color: #FFF;
+	width: 80px;
+	height: 40px;
+	cursor: pointer;
+}
+hr {
+	margin: 10px auto;
+	width: 75%;
+	border: 0.5px solid #2196F3;
+}
+/*** 右上角关闭按钮 ***/
+#close-btn {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	width: 30px;
+	height: 30px;
+	color: #2196F3;
+	cursor: pointer;
+}
+/*** 遮布 ***/
+.cover {
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, .4);
+	width: 100%;
+	height: 100%;
+	z-index: 3;
+}
+/*** 隐藏滚动条 ***/
+body::-webkit-scrollbar,.body::-webkit-scrollbar,.table-container::-webkit-scrollbar, form::-webkit-scrollbar {
+	width: 0;
 }
 
 /*** Header ***/
@@ -152,3 +240,60 @@ body{
 .item-id {
 	float: left;
 }
+
+/*** Contact ***/
+.contact {
+	position: fixed;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 100%;
+	text-align: center;
+	font-size: 16px;
+	text-align: center;
+}
+#service,#complaints,#company{
+	margin: 20px auto;
+	background-color: #FFF;
+	width: 80%;
+	height: 50px;
+	line-height: 50px;
+	border-radius: 10px;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
+	vertical-align: middle;
+	cursor: pointer;
+}
+#service {
+	color: #a0cf67;
+}
+#complaints {
+	color: #ff9966;
+}
+#company {
+	color: #2196F3;
+}
+#service span,#complaints span,#company span {
+	display:inline-block;
+	margin: auto 10px;
+}
+
+/*** TakeBill ***/
+#take-bill-now {
+	position: fixed;
+	bottom: 50px;
+	left: 50%;
+	transform: translateX(-50%);
+	margin: 20px auto;
+	border-radius: 50%;
+	background-color: #2196F3;
+	color: #FFF;
+	height: 60px;
+	width: 60px;
+	border: none;
+	font-size: 15px;
+	box-shadow: 1px 1px 2px rgba(0,0,0,.5);
+	cursor: pointer;
+	z-index: 2;
+	transition: bottom .5s ease-in-out;
+}
+
+
