--- a/report-react/src/index.css
+++ b/report-react/src/index.css
@@ -148,20 +148,15 @@ body::-webkit-scrollbar,.body::-webkit-scrollbar,.table-container::-webkit-scrol
 }
 .nav ul li {
 	flex: 1;
+	height: 50px;
 	text-align: center;
+	font-size: 10px;
+	line-height: 50px;
+	font-weight: 100;
 	cursor: pointer;
 	list-style: none;
 }
-.nav i {
- 	display: block;
- 	font-size: 22px;
- 	margin: 0;
- }
-.nav span {	
-	margin: 0;
-	font-size: 10px;
-	font-weight: 100;
-}
+
 
 /*** Body ***/
 .body {	
@@ -222,11 +217,11 @@ body::-webkit-scrollbar,.body::-webkit-scrollbar,.table-container::-webkit-scrol
 	line-height: 23px;
 	cursor: pointer;
 }
-#checkBill,#checkDevice {
+#checkBtn{
 	border: .5px solid #a0cf67;
 	color: #a0cf67;
 }
-#cancelBill {
+#cancelBtn {
 	border: .5px solid #ff9966;
 	color: #ff9966;
 }
