--- a/report-react/src/index.css
+++ b/report-react/src/index.css
@@ -212,11 +212,16 @@ body::-webkit-scrollbar,.body::-webkit-scrollbar,.table-container::-webkit-scrol
 	flex: 1;
 	height: 50px;
 	text-align: center;
+	vertical-align: middle;
 	font-size: 10px;
-	line-height: 50px;
 	font-weight: 100;
 	cursor: pointer;
 	list-style: none;
+}
+.nav i {
+	margin-top: 5px;
+	display: block;
+	font-size: 22px;
 }
 
 
@@ -435,3 +440,23 @@ body::-webkit-scrollbar,.body::-webkit-scrollbar,.table-container::-webkit-scrol
 #feedback-btn {
 	color: #a0cf67;
 }
+
+
+/*** Iconfont ***/
+@font-face {font-family: 'iconfont';
+    src: url('./iconfont/iconfont.eot');
+    src: url('./iconfont/iconfont.eot?#iefix') format('embedded-opentype'),
+    url('./iconfont/iconfont.woff') format('woff'),
+    url('./iconfont/iconfont.ttf') format('truetype'),
+    url('./iconfont/iconfont.svg#iconfont') format('svg');
+}
+
+.iconfont{
+    font-family:"iconfont" !important;
+    font-size:25px;
+    font-style:normal;
+	font-weight: 100;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.1px;
+    -moz-osx-font-smoothing: grayscale;
+};
