--- a/fortnite-website/src/index.css
+++ b/fortnite-website/src/index.css
@@ -16,15 +16,27 @@ div {
 a {
   text-decoration: none;
   outline: 0 none;
+  cursor: pointer;
 }
 img {
   display: block;
   border: none;
 }
+ul {
+  display: block;
+}
 li {
   display: list-item;
   text-align: -webkit-match-parent;
 }
+.clearfix::after {
+  content: ' ';
+  clear: both;
+  height: 0;
+  visibility: hidden;
+  display: block;
+}
+
 
 /*** Header ***/
 #fn-header {
@@ -137,12 +149,16 @@ li {
   left: 50%;
   bottom: -53px;
   margin-left: -700px;
-  background-color: red;
   box-shadow: 0 8px 11px rgba(0, 0, 0, .2);
+  transition: all .2s ease;
+}
+.banner-link-box ul {
+  overflow: hidden;
 }
 .banner-link-list li {
   width: 240px;
   height: 134px;
+  line-height: 80px;
   float: left;
   text-align: center;
   font-weight: bold;
@@ -172,7 +188,7 @@ li {
   height: 62px;
   background-position: 0 0;
   position: relative;
-  vertical-align: -31px;
+  vertical-align: -20px;
 }
 .icon-arrow {
   width: 26px;
@@ -211,7 +227,7 @@ li {
   text-align: center;
   height: 60px;
   line-height: 20px;
-  vertical-align: -31px;
+  vertical-align: -20px;
 }
 #download-btn .d-cn {
   font-size: 38px;
@@ -268,123 +284,189 @@ li {
   }
 }
 
-/*** Activity ***/
-#fn-activity {
-  background: linear-gradient(to bottom, #DFC7F1 0px, #F5F5F5 400px);
+/*** News ***/
+#fn-news {
+  background: url(./drawable/yellow_bg.jpg) no-repeat center top;
+  height: 900px;
+  min-width: 1400px;
+  position: relative;
 }
-.content {
+.news-box {
+  padding-top: 96px;
+  overflow: hidden;
+}
+.news {
+  position: relative;
+  height: 710px;
   width: 1400px;
   margin: 0 auto;
+}
+.roll-box {
+  width: 1400px;
   overflow: hidden;
-  font-size: 14px;
-  position: relative;
-  min-height: 800px;
-}
-.clearfix::after {
-  content: ' ';
-  clear: both;
-  height: 0;
-  visibility: hidden;
-  display: block;
-}
-.page-position {
-  padding: 93px 0 36px;
-  line-height: 20px;
   color: #333;
-}
-.icon-house {
-  width: 16px;
-  height: 14px;
-  margin: -4px 10px 0 0;
-  background: url(./drawable/common.png) no-repeat;
-  background-position: 0 0;
-  display: inline-block;
-  vertical-align: middle;
-}
-.activity-nav li {
-  width: 117px;
-  height: 42px;
-  line-height: 42px;
-  font-size: 18px;
-  font-weight: bold;
-  float: left;
-  text-align: center;
-  cursor: pointer;
-  margin-right: 15px;
-}
-.comm {
-  background: url(./drawable/common.png) no-repeat;
-}
-.activity-nav .comm {
-  background-position: -208px -276px;
-  color: #FFF;
-}
-.activity-list {
-  width: 1500px;
-  padding-top: 40px;
-}
-.activity-list li {
-  width: 407px;
-  background-color: #FFF;
-  padding: 10px;
-  float: left;
-  margin: 0 60px 60px 0;
-  line-height: 32px;
   position: relative;
-  color: #6D6C6A;
-  transition: all .3s linear;
 }
-.activity-img {
-  font-size: 16px;
-  font-weight: bold;
-  color: #3E3E3E;
-}
-.activity-img img {
-  width: 407px;
-  height: 234px;
-}
-.activity-img .activity-status {
-  width: 97px;
-  height: 32px;
-  line-height: 32px;
-  text-align: center;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  color: #FFF;
-  font-weight: normal;
-  background-position: -335px -276px;
-}
-.activity-collection {
-  position: absolute;
-  top: 245px;
-  right: 10px;
-  color: #F5843E;
-  cursor: pointer;
-}
-.icon-star {
-  width: 17px;
-  height: 17px;
-  background-position: -208px -328px;
-  display: inline-block;
-  vertical-align: middle;
-  margin: -3px 5px 0 0;
-}
-.activity-collection:hover {
-  text-decoration: underline;
-}
-.activity-list li p {
-  width: 320px;
+.roll-box ul {
+  height: 544px;
+  padding-top: 56px;
   overflow: hidden;
-  white-space: nowrap;
+  margin-left: 0px;
+
+}
+.roll-box ul::after {
+  content: "\200B";
+  display: block;
+  height: 0;
+  clear: both;
+}
+.roll-box ul li {
+  width: 680px;
+  height: 544px;
+  padding: 0px 10px;
+  float: left;
+}
+.roll-box .news-link {
+  padding: 10px;
+  height: 524px;
+  background: #fff;
+  position: relative;
+}
+.roll-box .news-pic {
+  margin-top: -56px;
+  display: block;
+  overflow: hidden;
+  height: 378px;
+  width: 662px;
+  position: relative;
+}
+.roll-box .news-pic img {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+.roll-box dl {
+  text-align: center;
+}
+.roll-box dl dt {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 82px;
+}
+.roll-box dl dd {
+  font-size: 14px;
+  line-height: 24px;
+  height: 48px;
+  padding: 0 80px;
+  overflow: hidden;
   text-overflow: ellipsis;
+}
+.roll-box dl .news-time {
+  height: 24px;
+  padding-top: 20px;
+  color: #A7A7A7;
+}
+.news .arrow {
+    position: absolute;
+    top: 236px;
+    width: 52px;
+    height: 52px;
+    background: url(./drawable/spr.png) no-repeat;
+    line-height: 300;
+    transition: all .2s ease;
+    cursor: pointer;
+}
+.news .arrow1 {
+  left: -126px;
+}
+.news .arrow2 {
+  right: -126px;
+  background-position: -91px 0;
+}
+.news .news-nav {
+  text-align: center;
+  padding-top: 48px;
+}
+.news .news-nav span {
+  width: 18px;
+  height: 18px;
+  background: #FED17A;
+  border-radius: 100%;
+  margin: 0 15px;
+  cursor: pointer;
   display: inline-block;
-  vertical-align: middle;
+  transition: all .2s ease;
 }
-.activity-list li p.activity-time {
-  color: #a6a6a6;
+.news .news-nav .navItemOn {
+  background: #FFFFFF
 }
-.activity-list li:hover {
-  transform: translateY(-15px);
-  box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+.news .newscenter {
+  position: absolute;
+  bottom: 45px;
+  right: 0;
+  background: url(./drawable/spr.png) no-repeat -276px 0;
+  height: 53px;
+  line-height: 53px;
+  width: 172px;
+  line-height: 300;
+  overflow: hidden;
+  transition: all 0.3s ease;
+}
+.news .newscenter:hover {
+  transform: translateY(-3px) scale(0.98);
+}
+
+/*** Footer ***/
+
+.footer-link-box {
+  background: #333 url(./drawable/ft_link_bg.jpg) center bottom no-repeat;
+  text-align: center;
+  z-index: 9;
+  position: relative;
+  height: 422px
+}
+.footer-link-box ul {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 176px 0 0;
+}
+.footer-link-box ul li {
+  display: inline-block;
+  margin: 0 40px;
+  position: relative;
+  zoom: 1;
+}
+.footer-link-box ul li p {
+  color: #FFFFFF;
+  font-size: 16px;
+  padding-top: 10px;
+}
+.footer-link-box ul li img {
+  width: 101px;
+  height: 101px;
+  transition: all .3s ease-in;
+}
+.footer-link-box ul li .footer-link-pop {
+  display: none;
+  position: absolute;
+  top: 116px;
+  left: 50%;
+  margin-left: -80px;
+  background: #fff;
+  padding: 8px;
+}
+.footer-link-box ul li .footer-link-pop span {
+  position: absolute;
+  top: -12px;
+  left: 50%;
+  margin-left: -12px;
+  background: url(./drawable/p_arrow.png) no-repeat;
+  width: 24px;
+  height: 12px;
+}
+.footer-link-box ul li:hover .i {
+  transform: rotate(20deg);
+}
+.footer-link-box ul li:hover .footer-link-pop {
+  display: block;
 }
